Major structure changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,19 @@
 
 <div class="content">
   <app-nav></app-nav>
-  <app-brush-table></app-brush-table>
+
+<div class="container" id="components"> 
+      <div class="row">
+        <div class="col">
+          <app-brush-table></app-brush-table>
+        </div>
+        <div class="col">
+          <app-brush-graph></app-brush-graph>
+        </div>
+      </div>
+
+</div>
+  
 </div>
 
 <section>
