--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,20 @@
-<div class="jumbotron container-fluid">
-  <h1>{{appTitle}}</h1>
+<div class="jumbotron jumbotron-fluid">
+  <h1 class="display-4 text-center">{{appTitle}}</h1>
 </div>
 
-<div class="content">
-  <app-nav></app-nav>
+<div class="container">
+  <div class="row">
+    <app-nav></app-nav>  
+  </div>
 
-<div class="container" id="components"> 
-      <div class="row">
-        <div class="col">
-          <app-brush-table></app-brush-table>
-        </div>
-        <div class="col">
-          <app-brush-graph></app-brush-graph>
-        </div>
-      </div>
-
-</div>
-  
+  <div class="row">
+    <div class="col">
+      <app-brush-table></app-brush-table>
+    </div>
+    <div class="col">
+      <app-brush-graph></app-brush-graph>
+    </div>
+  </div>
 </div>
 
 <section>
