--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -1,26 +1,22 @@
-.container {
-    margin-left: 0px;
+table input {
+    border: none;
+    background-color: transparent;
+    min-width: 4.5em;
+    max-width: 6em;
 }
 
 th, td {
     padding: 0.3em;
     min-width: 4.5em;
     max-width: 6em;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 th input {
     font-weight: bold;
-    min-width: 4.5em;
-    max-width: 6em;
 }
-
-table input {
-    border: none;
-    background-color: transparent;
-    min-width: 4.5em;
-    max-width: 6em;
+#resetBtn {
+    margin-left: 1em;
+    margin-bottom: 0.2em;
 }
 
 /* Prevents table header to wrap multiple lines */
@@ -32,17 +28,7 @@ input:focus{
     outline: none;
 }
 
-#charts {
-    width: 40%;
-    display: block;
-}
-
+/* Add scroll bar to table when screen is to small */
 #table-container {
     overflow-x: auto;
 }
-
-label {
-    font-weight: bold;
-}
-
-
