Bootstrap; table and graph correct position when adjusting window

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
   </div>
 
   <div class="row">
-    <div class="col">
+    <div class="col-xs-12 col-xl-7">
       <app-brush-table></app-brush-table>
     </div>
-    <div class="col">
+    <div class="col-xs-12 col-xl-5">
       <app-brush-graph></app-brush-graph>
     </div>
   </div>
