Small filereader updates

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,12 +5,11 @@
           <div class="custom-file">
             <label class="custom-file-label" for="theFile" id="theFileLabel">Choose a brushfile</label> 
             <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload"
-            (change)="fileChanged($event); uploadFile()"><br>
+            (change)="fileChanged($event)"><br>
           </div>
         </form>
       </div>
       <button *ngIf="brushes.length>0" class="btn btn-info" id="exportBtn" (click)="saveFileAs()">Export brush file</button>
       <button *ngIf="brushes.length>0" class="btn btn-info" id="resetBtn" (click)="resetChannelNames()">Reset channel names</button>
-      
   </div>
 </div>
