--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,21 +1,23 @@
 <!-- Show table and graph only if a file has been uploaded -->
+
 <div *ngIf="brushes.length>0" style="display:table"> 
-  <div id="table-container">
-      <h3>Data</h3>
-    <table class="table table-hover">
+  <div id="table-container" class="padding-0">
+    <h3>Data</h3>
+    <table class="table table-hover table-responsive-sm table-responsive-md">
       <thead>
-          <tr>
-            <th></th>
-            <th *ngIf="brushes[0].ch1>=0"><input type="text" id="channelName1" value="{{channelNames.ch1}}" (keyup)="changeChannelValue(1)"></th>
-            <th *ngIf="brushes[0].ch2>=0"><input type="text" id="channelName2" value="{{channelNames.ch2}}" (keyup)="changeChannelValue(2)"></th>
-            <th *ngIf="brushes[0].ch3>=0"><input type="text" id="channelName3" value="{{channelNames.ch3}}" (keyup)="changeChannelValue(3)"></th>
-            <th *ngIf="brushes[0].ch4>=0"><input type="text" id="channelName4" value="{{channelNames.ch4}}" (keyup)="changeChannelValue(4)"></th>
-            <th *ngIf="brushes[0].ch5>=0"><input type="text" id="channelName5" value="{{channelNames.ch5}}" (keyup)="changeChannelValue(5)"></th>
-            <th>Info</th>
-          </tr>
+        <tr>
+          <th> <!--Brush ID ?--> </th>
+          <th *ngIf="brushes[0].ch1>=0"><input type="text" id="channelName1" value="{{channelNames.ch1}}" (keyup)="changeChannelValue(1)"></th>
+          <th *ngIf="brushes[0].ch2>=0"><input type="text" id="channelName2" value="{{channelNames.ch2}}" (keyup)="changeChannelValue(2)"></th>
+          <th *ngIf="brushes[0].ch3>=0"><input type="text" id="channelName3" value="{{channelNames.ch3}}" (keyup)="changeChannelValue(3)"></th>
+          <th *ngIf="brushes[0].ch4>=0"><input type="text" id="channelName4" value="{{channelNames.ch4}}" (keyup)="changeChannelValue(4)"></th>
+          <th *ngIf="brushes[0].ch5>=0"><input type="text" id="channelName5" value="{{channelNames.ch5}}" (keyup)="changeChannelValue(5)"></th>
+          <th>Info</th>
+        </tr>
       </thead>
-      <tbody>
-          <tr *ngFor="let brush of brushes" id="{{brush.brushId}}">
+      
+      <tbody> <!-- Table body: items being paged -->
+          <tr *ngFor="let brush of pagedItems" id="{{brush.brushId}}">
             <td (mousedown)="markRow(brush.brushId)">{{brush.brushId}}</td>
             <td *ngIf="brush.ch1>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch1" value="{{brush.ch1}}"
               (keypress)="numberOnly($event, brush.brushId, 'ch1')"
@@ -44,4 +46,35 @@
       </tbody>
     </table>
   </div>
+
+  <!-- Pager -->
+  <nav id="pager" aria-label="Brush table pager">
+    <ul *ngIf="pager.pages && pager.pages.length" class="pagination justify-content-center">
+
+        <!-- Add if pages usually above 10
+        <li [ngClass]="{disabled:pager.currentPage === 1}" class="page-item">
+            <a (click)="setPage(1)" class="page-link">First</a>
+        </li>-->
+        <li [ngClass]="{disabled:pager.currentPage === 1}" class="page-item">
+            <a (click)="setPage(pager.currentPage - 1)" class="page-link">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+            </a>
+        </li>
+        <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}" class="page-item">
+            <a (click)="setPage(page)" class="page-link">{{page}}</a>
+        </li>
+        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}" class="page-item">
+            <a (click)="setPage(pager.currentPage + 1)" class="page-link">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+            </a>
+        </li>
+        <!-- Add if pages usually above 10 
+        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}" class="page-item">
+            <a (click)="setPage(pager.totalPages)" class="page-link">Last</a>
+        </li> -->
+    </ul>
+  </nav>
+
 </div>
