--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -37,9 +37,9 @@
               (keypress)="numberOnly($event, brush.brushId, 'ch5')"
               (keyup)="updateBrushes(brush.brushId, 'ch5'); numberOnly($event, brush.brushId, 'ch5')" 
               (mousedown)="markRow(brush.brushId)"></td>
-            <td><span contenteditable="true"><input type="text" style="display:table-cell" id="{{brush.brushId}}desc" class="desc" value="{{brush.desc}}"
+            <td><input type="text" style="display:table-cell" id="{{brush.brushId}}desc" class="desc" value="{{brush.desc}}"
               (keyup)="updateBrushes(brush.brushId, 'desc')"
-              (mousedown)="markRow(brush.brushId)"></span></td>
+              (mousedown)="markRow(brush.brushId)"></td>
           </tr>
       </tbody>
     </table>
