Structure in html file and input fixes

--- a/src/app/brush-table/brush-table.component.scss
+++ b/src/app/brush-table/brush-table.component.scss
@@ -34,3 +34,9 @@ th {
 input:focus{
     outline: none;
 }
+/* Remove number input spinners */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
