--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -18,30 +18,69 @@
       
       <tbody> <!-- Table body: items being paged -->
           <tr *ngFor="let brush of pagedItems" id="{{brush.brushId}}">
-            <td (mousedown)="markRow(brush.brushId)">{{brush.brushId}}</td>
-            <td *ngIf="brush.ch1>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch1" value="{{brush.ch1}}"
-              (keypress)="numberOnly($event, brush.brushId, 'ch1')"
-              (keyup)="updateBrushes(brush.brushId, 'ch1'); numberOnly($event, brush.brushId, 'ch1')" 
-              (mousedown)="markRow(brush.brushId)"></td>
-            <td *ngIf="brush.ch2>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch2" value="{{brush.ch2}}"
-              (keypress)="numberOnly($event, brush.brushId, 'ch2')"
-              (keyup)="updateBrushes(brush.brushId, 'ch2'); numberOnly($event, brush.brushId, 'ch2')" 
-              (mousedown)="markRow(brush.brushId)"></td>
-            <td *ngIf="brush.ch3>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch3" value="{{brush.ch3}}" 
-              (keypress)="numberOnly($event, brush.brushId, 'ch3')"
-              (keyup)="updateBrushes(brush.brushId, 'ch3'); numberOnly($event, brush.brushId, 'ch3')" 
-              (mousedown)="markRow(brush.brushId)"></td>
-            <td *ngIf="brush.ch4>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch4" value="{{brush.ch4}}"
-              (keypress)="numberOnly($event, brush.brushId, 'ch4')"
-              (keyup)="updateBrushes(brush.brushId, 'ch4'); numberOnly($event, brush.brushId, 'ch4')" 
-              (mousedown)="markRow(brush.brushId)"></td>
-            <td *ngIf="brush.ch5>=0"><input type="text" style="display:table-cell" id="{{brush.brushId}}ch5" value="{{brush.ch5}}"
-              (keypress)="numberOnly($event, brush.brushId, 'ch5')"
-              (keyup)="updateBrushes(brush.brushId, 'ch5'); numberOnly($event, brush.brushId, 'ch5')" 
-              (mousedown)="markRow(brush.brushId)"></td>
-            <td><input type="text" style="display:table-cell" id="{{brush.brushId}}desc" class="desc" value="{{brush.desc}}"
+            
+            <td (focus)="markRow(brush.brushId)">
+              {{brush.brushId}}
+            </td>
+            
+            <td *ngIf="brush.ch1>=0"><input 
+              type="number"
+              style="display:table-cell" 
+              id="{{brush.brushId}}ch1" 
+              value="{{brush.ch1 || ''}}" 
+              placeholder="0"
+              (keyup)="updateBrushes(brush.brushId, 'ch1')" 
+              (focus)="markRow(brush.brushId)">
+            </td>
+
+            <td *ngIf="brush.ch2>=0"><input 
+              type="number" 
+              style="display:table-cell" 
+              id="{{brush.brushId}}ch2" 
+              value="{{brush.ch2 || ''}}"
+              placeholder="0"
+              (keyup)="updateBrushes(brush.brushId, 'ch2')" 
+              (mousedown)="markRow(brush.brushId)">
+            </td>
+
+            <td *ngIf="brush.ch3>=0"><input 
+              type="number" 
+              style="display:table-cell" 
+              id="{{brush.brushId}}ch3" 
+              value="{{brush.ch3 || ''}}" 
+              placeholder="0"
+              (keyup)="updateBrushes(brush.brushId, 'ch3')" 
+              (mousedown)="markRow(brush.brushId)">
+            </td>
+
+            <td *ngIf="brush.ch4>=0"><input 
+              type="number" 
+              style="display:table-cell" 
+              id="{{brush.brushId}}ch4" 
+              value="{{brush.ch4 || ''}}"
+              placeholder="0"
+              (keyup)="updateBrushes(brush.brushId, 'ch4')" 
+              (mousedown)="markRow(brush.brushId)">
+            </td>
+
+            <td *ngIf="brush.ch5>=0"><input 
+              type="number" 
+              style="display:table-cell" 
+              id="{{brush.brushId}}ch5" 
+              value="{{brush.ch5 || ''}}"
+              placeholder="0"
+              (keyup)="updateBrushes(brush.brushId, 'ch5')" 
+              (mousedown)="markRow(brush.brushId)">
+            </td>
+
+            <td><input type="text" 
+              style="display:table-cell" 
+              id="{{brush.brushId}}desc" 
+              class="desc" 
+              value="{{brush.desc}}"
               (keyup)="updateBrushes(brush.brushId, 'desc')"
-              (mousedown)="markRow(brush.brushId)"></td>
+              (mousedown)="markRow(brush.brushId)">
+            </td>
           </tr>
       </tbody>
     </table>
