--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,3 @@
-.padding-0 {
-    padding: 0 !important;
-    margin: 0 !important;
-}
-.padding-sm {
-    padding: 2px !important;
-    margin: 2px !important;
-}
-.padding-md {
-    padding: 5px !important;
-    margin: 5px !important;
+#app-nav {
+    width: 100%;
 }
