--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,3 +1,1 @@
-<p>
-  brush-settings works!
-</p>
+<button type="button" class="nav-link btn btn-outline-info" id="resetBtn" (click)="resetChannelNames()">Reset channel name</button>
