--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,6 +1,13 @@
-#resetBtn {
-    margin-left: 1em;
-}
 #file-uploader {
     margin-bottom: 1em;
+}
+button {
+    margin-right: 5px;
+    padding: 5px;
+}
+li {
+    text-align: left;
+}
+.navbar-icons {
+    font-size: 38px;
 }
