--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,15 +1,47 @@
-<div id="file-uploader">
-  <div class="row"> 
-      <div class="col">
-        <form>
-          <div class="custom-file">
+<nav class="navbar navbar-expand-lg navbar-light bg-light ml-2 mr-2 py-3">
+  <span class="navbar-brand mb-0 h1 text-muted">Brush Editor</span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" *ngIf="brushes.length>0">
+        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
+          <span class="d-lg-none">Export file</span> <!-- Text only when navbar is collapsed -->
+          <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          <div class="custom-file" id="custom-input" data-toggle="collapse" data-target=".navbar-collapse.show">
             <label class="custom-file-label" for="theFile" id="theFileLabel">Choose a brushfile</label> 
-            <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload"
-            (change)="fileChanged($event)"><br>
+            <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
           </div>
-        </form>
-      </div>
-      <button *ngIf="brushes.length>0" class="btn btn-info" id="exportBtn" (click)="saveFileAs()">Export brush file</button>
-      <button *ngIf="brushes.length>0" class="btn btn-info" id="resetBtn" (click)="resetChannelNames()">Reset channel names</button>
+        </a>
+      </li>
+    </ul>
   </div>
+
+  <!-- Robot API -->
+  <!--
+  <div class="collapse navbar-collapse" id="navbarNav"> 
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" *ngIf="brushes.length>0">
+        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+          <span class="d-lg-none">Export file <i class="fas fa-file-download"></i></span>
+          <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i>
+        </a>
+      </li>
+      <li class="nav-item" *ngIf="brushes.length>0">
+          <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <span class="d-lg-none">File upload <i class="fas fa-file-upload"></i></span>
+            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i>
+          </a>
+      </li>
+    </ul>
+  </div>
+  -->
+</nav>
+<div class="container mt-5 text-center" *ngIf="brushes.length<=0">
+  <h3>Please choose a brushfile</h3>
 </div>
