Scroller for table

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,91 +1,93 @@
 <!-- Show table and graph only if a file has been uploaded -->
 
-<div *ngIf="brushes.length>0" style="display:table"> 
-  <div id="table-container" class="padding-0">
+<div *ngIf="brushes.length>0"> 
+  <div id="tableContainer" class="padding-0">
     <h3>Data</h3>
-    <table class="table table-hover table-responsive-sm table-responsive-md">
-      <thead>
-        <tr>
-          <th> <!--Brush ID ?--> </th>
-          <th *ngIf="brushes[0].ch1>=0"><input type="text" id="channelName1" value="{{channelNames.ch1}}" (keyup)="changeChannelValue(1)"></th>
-          <th *ngIf="brushes[0].ch2>=0"><input type="text" id="channelName2" value="{{channelNames.ch2}}" (keyup)="changeChannelValue(2)"></th>
-          <th *ngIf="brushes[0].ch3>=0"><input type="text" id="channelName3" value="{{channelNames.ch3}}" (keyup)="changeChannelValue(3)"></th>
-          <th *ngIf="brushes[0].ch4>=0"><input type="text" id="channelName4" value="{{channelNames.ch4}}" (keyup)="changeChannelValue(4)"></th>
-          <th *ngIf="brushes[0].ch5>=0"><input type="text" id="channelName5" value="{{channelNames.ch5}}" (keyup)="changeChannelValue(5)"></th>
-          <th>Info</th>
-          <th>Remove</th> 
-        </tr>
-      </thead>
-      
-      <tbody> <!-- Table body: items being paged -->
-          <tr *ngFor="let brush of pagedItems" id="{{brush.brushId}}">
-            
-            <td (focus)="markRow(brush.brushId)">
-              {{brush.brushId}}
-            </td>
-            
-            <td *ngIf="brush.ch1>=0"><input 
-              type="number"
-              id="{{brush.brushId}}ch1" 
-              value="{{brush.ch1 || ''}}" 
-              placeholder="0"
-              (keyup)="updateBrushes(brush.brushId, 'ch1')" 
-              (focus)="markRow(brush.brushId)">
-            </td>
-
-            <td *ngIf="brush.ch2>=0"><input 
-              type="number" 
-              id="{{brush.brushId}}ch2" 
-              value="{{brush.ch2 || ''}}"
-              placeholder="0"
-              (keyup)="updateBrushes(brush.brushId, 'ch2')" 
-              (mousedown)="markRow(brush.brushId)">
-            </td>
-
-            <td *ngIf="brush.ch3>=0"><input 
-              type="number" 
-              id="{{brush.brushId}}ch3" 
-              value="{{brush.ch3 || ''}}" 
-              placeholder="0"
-              (keyup)="updateBrushes(brush.brushId, 'ch3')" 
-              (mousedown)="markRow(brush.brushId)">
-            </td>
-
-            <td *ngIf="brush.ch4>=0"><input 
-              type="number" 
-              id="{{brush.brushId}}ch4" 
-              value="{{brush.ch4 || ''}}"
-              placeholder="0"
-              (keyup)="updateBrushes(brush.brushId, 'ch4')" 
-              (mousedown)="markRow(brush.brushId)">
-            </td>
-
-            <td *ngIf="brush.ch5>=0"><input 
-              type="number" 
-              id="{{brush.brushId}}ch5" 
-              value="{{brush.ch5 || ''}}"
-              placeholder="0"
-              (keyup)="updateBrushes(brush.brushId, 'ch5')" 
-              (mousedown)="markRow(brush.brushId)">
-            </td>
-
-            <td><input 
-              type="text" 
-              id="{{brush.brushId}}desc" 
-              class="desc" 
-              value="{{brush.desc}}"
-              (keyup)="updateBrushes(brush.brushId, 'desc')"
-              (mousedown)="markRow(brush.brushId)">
-            </td>
-
-            <td>
-              <button type="button" id="btnDelete" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)">
-                <i class="fas fa-trash-alt"></i>
-              </button>
-            </td>
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th> <!--Brush ID ?--> </th>
+            <th *ngIf="brushes[0].ch1>=0"><input type="text" id="channelName1" value="{{channelNames.ch1}}" (keyup)="changeChannelValue(1)"></th>
+            <th *ngIf="brushes[0].ch2>=0"><input type="text" id="channelName2" value="{{channelNames.ch2}}" (keyup)="changeChannelValue(2)"></th>
+            <th *ngIf="brushes[0].ch3>=0"><input type="text" id="channelName3" value="{{channelNames.ch3}}" (keyup)="changeChannelValue(3)"></th>
+            <th *ngIf="brushes[0].ch4>=0"><input type="text" id="channelName4" value="{{channelNames.ch4}}" (keyup)="changeChannelValue(4)"></th>
+            <th *ngIf="brushes[0].ch5>=0"><input type="text" id="channelName5" value="{{channelNames.ch5}}" (keyup)="changeChannelValue(5)"></th>
+            <th><input type="text" value="Info" readonly></th>
+            <th></th> 
           </tr>
-      </tbody>
-    </table>
+        </thead>
+        
+        <tbody> <!-- Table body: items being paged -->
+            <tr *ngFor="let brush of pagedItems" id="{{brush.brushId}}">
+              
+              <td (focus)="markRow(brush.brushId)">
+                {{brush.brushId}}
+              </td>
+              
+              <td *ngIf="brush.ch1>=0"><input 
+                type="number"
+                id="{{brush.brushId}}ch1" 
+                value="{{brush.ch1 || ''}}" 
+                placeholder="0"
+                (keyup)="updateBrushes(brush.brushId, 'ch1')" 
+                (focus)="markRow(brush.brushId)">
+              </td>
+  
+              <td *ngIf="brush.ch2>=0"><input 
+                type="number" 
+                id="{{brush.brushId}}ch2" 
+                value="{{brush.ch2 || ''}}"
+                placeholder="0"
+                (keyup)="updateBrushes(brush.brushId, 'ch2')" 
+                (mousedown)="markRow(brush.brushId)">
+              </td>
+  
+              <td *ngIf="brush.ch3>=0"><input 
+                type="number" 
+                id="{{brush.brushId}}ch3" 
+                value="{{brush.ch3 || ''}}" 
+                placeholder="0"
+                (keyup)="updateBrushes(brush.brushId, 'ch3')" 
+                (mousedown)="markRow(brush.brushId)">
+              </td>
+  
+              <td *ngIf="brush.ch4>=0"><input 
+                type="number" 
+                id="{{brush.brushId}}ch4" 
+                value="{{brush.ch4 || ''}}"
+                placeholder="0"
+                (keyup)="updateBrushes(brush.brushId, 'ch4')" 
+                (mousedown)="markRow(brush.brushId)">
+              </td>
+  
+              <td *ngIf="brush.ch5>=0"><input 
+                type="number" 
+                id="{{brush.brushId}}ch5" 
+                value="{{brush.ch5 || ''}}"
+                placeholder="0"
+                (keyup)="updateBrushes(brush.brushId, 'ch5')" 
+                (mousedown)="markRow(brush.brushId)">
+              </td>
+  
+              <td><input 
+                type="text" 
+                id="{{brush.brushId}}desc" 
+                class="desc" 
+                value="{{brush.desc}}"
+                (keyup)="updateBrushes(brush.brushId, 'desc')"
+                (mousedown)="markRow(brush.brushId)">
+              </td>
+  
+              <td>
+                <button title="Clear content of row" id="btnDelete" class="btn btn-link" (mousedown)="deleteRow(brush.brushId)">
+                  <i class="fas fa-times"></i>
+                </button>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 
   <!-- Pager -->
