--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,1 +1,4 @@
-<button type="button" class="nav-link btn btn-outline-info" id="resetBtn" (click)="resetChannelNames()">Reset channel name</button>
+<div *ngIf="brushes.length>0">
+    <button type="button" class="nav-link btn btn-outline-secondary" id="resetBtn" (click)="resetChannelNames()">Reset channel names</button>
+    <p>File comment</p>
+</div>
