--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light ml-2 mr-2 py-4"> <!-- navbar-dark bg-dark ?? -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 py-4"> <!-- navbar-dark bg-dark ?? -->
   <span class="navbar-brand mb-0 h1 text-muted">Brush Editor</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -41,6 +41,7 @@
     </ul>
   </div>
   -->
+
 </nav>
 <div class="container mt-5 text-center" *ngIf="brushes.length<=0">
   <h3>Please choose a brushfile</h3>
