Table responsive class added

--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="brushes.length>0"> 
   <div id="tableContainer" class="padding-0">
     <h3>Data</h3>
-    <div class="table-responsive">
+    <div class="table-responsive-sm">
       <table class="table table-hover">
         <thead>
           <tr>
