Bootstrap grid fixes and scrollbar fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,15 @@
   <app-nav id="app-nav"></app-nav>  
 </div>
 </div>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <app-brush-settings id="app-settings"></app-brush-settings>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-lg-7">
+    <div class="col-12 col-sm-12 col-lg-8">
       <app-brush-table id="app-table"></app-brush-table>
     </div>
-    <div class="col-xs-12 col-lg-5">
+    <div class="col-12 col-sm-12 col-lg-4">
       <app-brush-graph id="app-graph"></app-brush-graph>
     </div>
   </div>
