--- a/src/app/brush-table/brush-table.component.html
+++ b/src/app/brush-table/brush-table.component.html
@@ -1,7 +1,7 @@
 <!-- Show table and graph only if a file has been uploaded -->
 
 <div *ngIf="brushes.length>0"> 
-  <div id="tableContainer" class="padding-0">
+  <div id="tableContainer">
     <h3>Data</h3>
     <div class="table-responsive">
       <table class="table table-hover">
