--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,42 +1,51 @@
-<div *ngIf="brushes.length>0">
-    <div class="row">
-        <div class="m-2 d-inline-block">
-            <button type="button" class="nav-link btn btn-primary" id="resetBtn" (click)="resetChannelNames()" style="padding: 6px 12px 6px 12px">Reset channel names</button>
-        </div>
-        <div class="dropdown m-2 d-inline-block">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Brush Device
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </div>
-        <div class="dropdown m-2 d-inline-block">
-            <button class="btn btn-primary dropdown-toggle btn-md" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Brush Table
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-        </div>
-        <div class="dropdown m-2 d-inline-block">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Material
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+
+<div *ngIf="brushes.length>0"> <!-- May neew class row to align buttons -->
+    <div class="mr-2 d-inline-block">
+        <button type="button" class="nav-link btn btn-primary" id="resetBtn" (click)="resetChannelNames()" style="padding: 6px 12px 6px 12px">Reset channel names</button>
+    </div>
+
+    <!-- Settings
+    <div class="dropdown mr-2 mt-2 d-inline-block">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Brush Device
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">A1Brush</a>
+        <a class="dropdown-item" href="#">A2Brush</a>
+        <a class="dropdown-item" href="#">A3Brush</a>
         </div>
     </div>
-    <div class="row">
-        <blockquote class="blockquote py-2">
-            <p class="mb-0">File comment: "{{fileComment}}"</p>
-        </blockquote>
+
+    <div class="dropdown mr-2 mt-2 d-inline-block">
+        <button class="btn btn-primary dropdown-toggle btn-md" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Brush Table
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Table1</a>
+        <a class="dropdown-item" href="#">Table2</a>
+        <a class="dropdown-item" href="#">Table3</a>
+        </div>
     </div>
+    <div class="dropdown mr-2 mt-2 d-inline-block">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Material
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Material1</a>
+        <a class="dropdown-item" href="#">Material2</a>
+        <a class="dropdown-item" href="#">Material3</a>
+        </div>
+    </div>
+    <div class="form-group d-inline-block mt-2">
+        <div class="d-inline-block">
+            <input class="form-control" type="search" value="Go to table number" id="example-search-input">
+        </div>
+    </div>
+  -->
+</div>
+
+<div *ngIf="fileComment">
+    <blockquote class="blockquote">
+        <p class="mb-0">File comment: "{{fileComment}}"</p>
+    </blockquote>
 </div>
