Init navbar update

--- a/src/app/brush-settings/brush-settings.component.html
+++ b/src/app/brush-settings/brush-settings.component.html
@@ -1,4 +1,4 @@
-<div class="row ml-0" *ngIf="brushes.length>0"> <!-- May neew class row to align buttons -->
+<div class="row ml-0" *ngIf="brushes.length>0"> <!-- May need class row to align buttons -->
     <div class="mr-2 mt-2 d-inline-block">
         <button type="button" class="nav-link btn btn-primary" id="resetBtn" (click)="resetChannelNames()" style="padding: 6px 12px 6px 12px">Reset channel names</button>
     </div>
