--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 py-4"> <!-- navbar-dark bg-dark ?? -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-4"> <!-- navbar-dark bg-dark ?? -->
   
   <span class="navbar-brand mb-0 h1 text-muted">Brush Editor</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,54 +6,126 @@
   </button>
   <div class="collapse show navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" *ngIf="brushes.length>0">
-          <span class="h6 text-muted d-none d-lg-block mt-3">Robot</span>
+      <!-- File name -->        
+      <li class="nav-item"> <!--  *ngIf="brushes.length>0" -->
+        <a class="nav-link" href="#">
+          <span id="theFileLabel" class="text-muted d-none d-lg-block mt-3">No file choosed</span>
+        </a>
       </li>
+
+      <!-- Brush settings -->
       <li class="nav-item" *ngIf="brushes.length>0">
+        <a class="nav-link" href="#">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Brush Device
+            </button>
+            <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Brush Device
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A1Brush</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A2Brush</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">A3Brush</a>
+            </div>
+          </div> 
+        </a>
+      </li>
+
+      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+        <a class="nav-link" href="#">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Brush Table
+              </button>
+              <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Brush Table
+              </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table1</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table2</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Table3</a>
+            </div>
+          </div> 
+        </a>
+      </li>
+
+      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+        <a class="nav-link" href="#">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle navbar-buttons d-none d-lg-block" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Material
+            </button>
+            <a class="dropdown-toggle d-lg-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Material
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material1</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material2</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Material3</a>
+            </div>
+          </div> 
+        </a>
+      </li>
+
+      <!-- Divider -->
+      <li class="dropdown-divider" *ngIf="fileComment"></li>
+
+      <!-- File upload/download setting -->
+      <li class="nav-item">
+          <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Robot</span> <!-- This text only on larger screens -->
+      </li>
+      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
         <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
           <span class="d-lg-none">Robot: Export file</span> <!-- Text only when navbar is collapsed -->
           <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
         </a>
       </li>
-      <li class="nav-item" *ngIf="brushes.length>0">
-          <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <span class="d-lg-none">Robot: Choose brushfile</span>
-            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i>
-          </a>
-      </li>
-      <li class="nav-item" *ngIf="brushes.length>0">
-          <span class="h6 text-muted d-none d-lg-block ml-5 mt-3">Local</span>
-      </li>
-      <li class="nav-item" *ngIf="brushes.length>0">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
-          <span class="d-lg-none">Local: Export brushfile</span>
-         <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i>
-        </a>
-      </li>
-      <!-- Removing file uploader
-        https://stackoverflow.com/questions/8350927/file-upload-button-without-input-field
-      <li class="nav-item" *ngIf="brushes.length>0">
-          <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <span class="d-lg-none">Robot: Choose brushfile</span>
-            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i>
-          </a>
-      </li>
-      -->
       <li class="nav-item">
-        <a class="nav-link" href="#">
-          <div class="custom-file" id="custom-input" data-toggle="collapse" data-target=".navbar-collapse.show">
-            <label class="custom-file-label" for="theFile" id="theFileLabel">Choose a brushfile</label> 
-            <input type="file" class="custom-file-input" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)">
-          </div>
+          <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">
+            <span class="d-lg-none">Robot: Choose brushfile</span> <!-- Text only when navbar is collapsed -->
+            <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
+          </a>
+      </li>
+      <li class="nav-item">
+          <span class="h6 text-muted d-none d-lg-block ml-3 mt-3">Local</span> <!-- This text only on larger screens -->
+      </li>
+      <li class="nav-item" *ngIf="brushes.length>0"> <!--  Hidden when no brushfile is choosed -->
+        <a class="nav-link" href="#" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="saveFileAs()">
+          <span class="d-lg-none">Local: Export brushfile</span> <!-- Text only when navbar is collapsed -->
+          <i class="fas fa-file-download fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
         </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link pointer" href="#">
+          <label for="theFile" class="chooseFile">
+              <span class="d-lg-none">Local: Choose brushfile</span> <!-- Text only when navbar is collapsed -->
+              <i class="fas fa-file-upload fa-2x d-none d-lg-block navbar-icons"></i> <!-- Icon only on larger screens -->
+          </label>
+            <div class="fileupload">
+              <input type="file" id="theFile" aria-describedby="fileUpload" (change)="fileChanged($event)" data-toggle="collapse" data-target=".navbar-collapse.show">
+            </div>
+        </a>
+      </li>
+
+      <!-- Divider -->
+      <li class="dropdown-divider" *ngIf="fileComment"></li>
+
+      <!-- File comment -->
+      <li class="nav-item" *ngIf="fileComment">
+          <p class="mb-0 text-muted">File comment: "{{fileComment}}"</p>
       </li>
     </ul>
   </div>
-
-  <!-- Robot API -->
-  
-
 </nav>
+
+<!-- If no brushfile is chosen -->
 <div class="container mt-5 text-center" *ngIf="brushes.length<=0">
   <h3>Please choose a brushfile</h3>
 </div>
